Fixed a bug with lightboxes and scrolling down the page.

--- a/branches/1.5/extensions/lightbox/1.0/css/lightbox_overrides.css
+++ b/branches/1.5/extensions/lightbox/1.0/css/lightbox_overrides.css
@@ -39,3 +39,9 @@ div.lightboxContainer img {
 		margin: 0;
 		padding: 0;
 }
+/* 2010-11-26 - RAK - Changed to fixed. Specified height variable.*/
+.lightboxOverlay {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+}
