--- a/branches/1.5/extensions/lightbox/1.0/css/lightbox.css
+++ b/branches/1.5/extensions/lightbox/1.0/css/lightbox.css
@@ -146,14 +146,12 @@ end user license agreement.
 }
 
 /* Overlay <div> */
-/* 2010-11-26 - RAK - Changed to fixed. Specified height variable.*/
 .lightboxOverlay {
 	background-color: #555555;
 	left: 0px;
-	position: fixed;
+	position: absolute;
 	top: 0px;
 	width: 100%;
-	height: 100%;
 }
 
 /* Override lightbox image visibility inside subtitle */
