--- a/branches/1.5.2/extensions/lightbox/2.0/css/lightbox_overrides.css
+++ b/branches/1.5.2/extensions/lightbox/2.0/css/lightbox_overrides.css
@@ -10,7 +10,7 @@ the specific language governing rights and limitations under the License.
 The Original Code is comprised of the ADF directory
 
 The Initial Developer of the Original Code is
-PaperThin, Inc. Copyright(C) 2010.
+PaperThin, Inc. Copyright(C) 2012.
 All Rights Reserved.
 
 By downloading, modifying, distributing, using and/or accessing any files 
@@ -19,13 +19,17 @@ end user license agreement.
 */
 /*
  * 	ADF UPDATES - MFC [2010-02-23]
- *
+ *				
  *	History:
- *		2012-02-24 - MFC - Added styles for the lightbox border images.
+ *		2012-02-23 - MFC - Moved into lightbox v2.0.
  */
 
 .lightboxContainer .lightboxIframe {
-	overflow-y: auto;
+	overflow-y: hidden;
+	overflow-x: hidden;
+}
+.lightboxContainer .lightboxIframe {
+	overflow-y: hidden;
 	overflow-x: hidden;
 }
 .lightboxContainer .lightboxTopCorner {
@@ -35,6 +39,11 @@ end user license agreement.
 div#loading_container div#loading_content{
 	background:none repeat scroll 0 0 #FFFFFF;
 	border:1px solid #7E96AD;
+}
+/* Set the loading message Image arrows */
+div#loading_container img {
+	display: inline;
+	margin: 0px;
 }
 /* Borders images for lightbox */
 div.lightboxContainer img {
@@ -47,4 +56,8 @@ div.lightboxContainer img {
 	position: fixed;
 	width: 100%;
 	height: 100%;
+}
+/* Set the spacing for the H1 tag */
+.lightboxContainer .lightboxHeader h1 {
+	line-height: 1 !important;
 }
