--- a/branches/1.5.2/extensions/lightbox/1.0/css/lightbox_overrides.css
+++ b/branches/1.5.2/extensions/lightbox/1.0/css/lightbox_overrides.css
@@ -22,6 +22,7 @@ end user license agreement.
  *
  *	History:
  *		2012-02-24 - MFC - Added styles for the lightbox border images.
+ *		2012-03-08 - MFC - Added "border: none;" for the img tags.
  */
 
 .lightboxContainer .lightboxIframe {
@@ -41,6 +42,7 @@ div.lightboxContainer img {
 	margin: 0;
 	padding: 0;
 	display: inline;
+	border: none;
 }
 /* 2010-11-26 - RAK - Changed to fixed. Specified height variable.*/
 .lightboxOverlay {
