--- a/branches/1.5.2/extensions/lightbox/1.0/css/lightbox_overrides.css
+++ b/branches/1.5.2/extensions/lightbox/1.0/css/lightbox_overrides.css
@@ -10,7 +10,7 @@ the specific language governing rights and limitations under the License.
 The Original Code is comprised of the ADF directory
 
 The Initial Developer of the Original Code is
-PaperThin, Inc. Copyright(C) 2010.
+PaperThin, Inc. Copyright(C) 2012.
 All Rights Reserved.
 
 By downloading, modifying, distributing, using and/or accessing any files 
@@ -24,6 +24,7 @@ end user license agreement.
  *		2012-02-24 - MFC - Added styles for the lightbox border images.
  *		2012-03-08 - MFC - Added "border: none;" for the img tags.
  *		2012-03-12 - MFC - Added no background for the h1.
+ *		2012-04-09 - MFC - Updated styles for CS 7 and 6.2.
  */
 
 .lightboxContainer .lightboxIframe {
@@ -37,6 +38,15 @@ end user license agreement.
 div#loading_container div#loading_content{
 	background:none repeat scroll 0 0 #FFFFFF;
 	border:1px solid #7E96AD;
+}
+/* Loading Image in the dialog */
+div#loading_container img#loading_img{
+	border:none;
+}
+/* Set the loading message Image arrows */
+div#loading_container img {
+	display: inline;
+	margin: 0px;
 }
 /* Borders images for lightbox */
 div.lightboxContainer img {
@@ -55,4 +65,9 @@ div.lightboxContainer .lightboxHeader h1 {
 	position: fixed;
 	width: 100%;
 	height: 100%;
+}
+/* Set the spacing for the H1 tag */
+.lightboxContainer .lightboxHeader h1 {
+	line-height: 1 !important;
+	background: none !important;
 }
