--- a/branches/1.5.2/extensions/lightbox/1.0/css/lightbox_overrides_6_1.css
+++ b/branches/1.5.2/extensions/lightbox/1.0/css/lightbox_overrides_6_1.css
@@ -10,7 +10,7 @@ the specific language governing rights and limitations under the License.
 The Original Code is comprised of the ADF directory
 
 The Initial Developer of the Original Code is
-PaperThin, Inc. Copyright(C) 2010.
+PaperThin, Inc. Copyright(C) 2012.
 All Rights Reserved.
 
 By downloading, modifying, distributing, using and/or accessing any files 
@@ -24,8 +24,13 @@ end user license agreement.
  *		2012-02-24 - MFC - Added styles for the loading image, 
  *							lightbox border images, 
  *							and H1 title spacing.
+ *		2012-04-09 - MFC - Updated styles for CS 7 and 6.2.
  */
 
+.lightboxContainer .lightboxIframe {
+	overflow-y: hidden;
+	overflow-x: hidden;
+}
 .lightboxContainer .lightboxIframe {
 	overflow-y: hidden;
 	overflow-x: hidden;
@@ -38,6 +43,10 @@ div#loading_container div#loading_content{
 	background:none repeat scroll 0 0 #FFFFFF;
 	border:1px solid #7E96AD;
 }
+/* Loading Image in the dialog */
+div#loading_container img#loading_img{
+	border:none;
+}
 /* Set the loading message Image arrows */
 div#loading_container img {
 	display: inline;
@@ -48,6 +57,7 @@ div.lightboxContainer img {
 	margin: 0;
 	padding: 0;
 	display: inline;
+	border: none;
 }
 /* 2010-11-26 - RAK - Changed to fixed. Specified height variable.*/
 .lightboxOverlay {
@@ -58,4 +68,5 @@ div.lightboxContainer img {
 /* Set the spacing for the H1 tag */
 .lightboxContainer .lightboxHeader h1 {
 	line-height: 1 !important;
+	background: none !important;
 }
