Added a pre-save-form-hook.cfm file in the site-files directory. Also updated file with comment headers.

--- a/branches/1.8.1/extensions/customfields/object_list_builder/object_list_builder_editor_styles.css
+++ b/branches/1.8.1/extensions/customfields/object_list_builder/object_list_builder_editor_styles.css
@@ -1,3 +1,4 @@
+/* object_list_builder_editor_styles.css */
 .placeholderWrapper { border: 1px solid #ddd; display: inline-block; padding: 0 5px; clear:both;}
 .titleClass { font-size: 12px; font-weight: bold; }
 .underLineText { text-decoration: underline; font-size: 9px;}
