--- a/branches/1.8.1/extensions/customfields/object_list_builder/object_list_builder_styles.css
+++ b/branches/1.8.1/extensions/customfields/object_list_builder/object_list_builder_styles.css
@@ -1,4 +1,4 @@
-
+/* object_list_builder_styles.css */
 .borderedTable { border: 1px solid #b6b6b6; height: 100%; }
 .borderedTable table {padding: 0px;}
 .header  { border: 1px solid #b6b6b6; }
