--- a/branches/2.0-cs10/extensions/customfields/font_awesome_select/font_awesome_select_styles.css
+++ b/branches/2.0-cs10/extensions/customfields/font_awesome_select/font_awesome_select_styles.css
@@ -1,14 +1,15 @@
 /* font_awesome_select_styles.css */
 
-.cols-3-outer {
+.fa-cols-3-outer {
 	overflow-x: scroll; 
-	width:650px; 
+	/* width:600px;*/
+	width: 100%; 
 	height:200px; 
 	border: 1px solid #999; 
 	background-color: #fcfcfc;
 }
 
-.cols-3 {
+.fa-cols-3 {
 	height: 180px;
 	-webkit-column-count: 3;
 	-moz-column-count: 3;
@@ -18,7 +19,7 @@
 	column-gap: 1px; 
 }
 	
-.cols-3 ul li {
+.fa-cols-3 ul li {
 	line-height: 2; 
 	font-size: 12px; 
 	list-style: none; 
@@ -27,7 +28,7 @@
 	cursor: pointer; 
 }
 
-li div:hover, li div.selected { 
+.fa-cols-3 li div:hover, .fa-cols-3 li div.selected {
 	background-color: #D9E3ED; 
 	border: 1px solid #999; 
 }
@@ -36,24 +37,24 @@ i.fa-border {
 	border-color: #555 !important; 
 }
 
-.selectedDataDiv {
+.fa-selectedDataDiv {
 	display: inline-block;
 	font-size: 12px;
 	padding: 5px 10px 0px 0px;
 }
 
-.searchInput {
+.fa-searchInput {
 	width: 180px;
 	margin-bottom: 5px;
 	padding-left: 5px;
 }
 
-.clearButton {
+.fa-clearButton {
 	padding: 1px 5px;
 	vertical-align: baseline !important;
 }
 
-.optionsDiv {
+.fa-optionsDiv {
 	margin-top: 3px;
 	vertical-align:baseline;
 }
