--- a/branches/2.0-cs10/extensions/customfields/font_awesome_select/font_awesome_select_styles.css
+++ b/branches/2.0-cs10/extensions/customfields/font_awesome_select/font_awesome_select_styles.css
@@ -23,14 +23,15 @@
 	line-height: 2; 
 	font-size: 12px; 
 	list-style: none; 
-	padding-left: 5px; 
-	padding-right: 5px; 
+	padding-left: 3px; 
+	padding-right: 3px; 
 	cursor: pointer; 
 }
 
 .fa-cols-3 li div:hover, .fa-cols-3 li div.selected {
 	background-color: #D9E3ED; 
 	border: 1px solid #999; 
+	padding: 1px 1px 1px 6px;
 }
 
 i.fa-border { 
