Move more default styling into custom_element_hierarchy_selector_styles.css Add styling there for .jstree-disabled on parent div, remove ad hoc js for that Rename disableJSTree to jsTreeDisable, add possible TODOs for it Bump field version for cfc and css changes

--- a/branches/2.0.0-cs10/extensions/customfields/custom_element_hierarchy_selector/custom_element_hierarchy_selector_styles.css
+++ b/branches/2.0.0-cs10/extensions/customfields/custom_element_hierarchy_selector/custom_element_hierarchy_selector_styles.css
@@ -16,9 +16,6 @@
 .jstree-wholerow-ul{position:relative;display:inline-block;min-width:100%}
 .jstree-wholerow-ul .jstree-anchor,.jstree-wholerow-ul .jstree-icon{position:relative}
 .jstree-wholerow-ul .jstree-wholerow{width:100%;cursor:pointer;position:absolute;left:0;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
-
-.jstree-default .jstree-disabled.jstree-clicked {background: #fff !important;}
-
 .vakata-context{display:none}
 .vakata-context,.vakata-context ul{margin:0;padding:2px;position:absolute;background:#f5f5f5;border:1px solid #979797;-moz-box-shadow:5px 5px 4px -4px #666;-webkit-box-shadow:2px 2px 2px #999;box-shadow:2px 2px 2px #999}
 .vakata-context ul{list-style:none;left:100%;margin-top:-2.7em;margin-left:-4px}
@@ -210,3 +207,8 @@
 .jstree-default .jstree-themeicon-custom{background-color:transparent;background-image:none}
 .jstree-default>.jstree-container-ul>.jstree-node{margin-left:0;margin-right:0}
 */
+
+.jstree-default-small {background: #fff; border: 1px solid #999; overflow-y: scroll;}
+.jstree-default.jstree-disabled {background: #e6e6e6; color:#666;}
+.jstree-default.jstree-disabled .jstree-icon {opacity: .6;}
+.jstree-default.jstree-disabled .jstree-disabled.jstree-clicked {background: #beebff; color: #333;}
