Updated to fix issues with validating the entered scriptURL and returning the correct status

--- a/branches/2.0.0-cs10/extensions/customfields/app_config_page/app_config_page_styles.css
+++ b/branches/2.0.0-cs10/extensions/customfields/app_config_page/app_config_page_styles.css
@@ -1,6 +1,13 @@
 /* app_config_page_styles.css */
 
-.smallerLabel {
+
+.cft_acpSmallLabel {
+	font-family: Verdana,Arial;
+	font-size: 0.8em;
+	color: #000000;
+}
+
+.cft_acpSmallerLabel {
 	font-family: Verdana,Arial;
 	font-size: 0.6em;
 	color: #000000;
